@@ -275,7 +275,21 @@ Options::set_mimic_xpad()
   extra_events  = false;
 
   set_device_name("Microsoft X-Box 360 pad");
+  set_device_usbid("045e:028e:110");
   get_controller_options().uinput.mimic_xpad();
+}
+
+void
+Options::set_mimic_xpad_wireless()
+{
+  // BTN_BACK is recognized as mouse button, so we have to disallow
+  // automatic allocation
+  extra_devices = false;
+  extra_events  = false;
+
+  set_device_name("Xbox 360 Wireless Receiver");
+  set_device_usbid("045e:0719:100");
+  get_controller_options().uinput.mimic_xpad_wireless();
 }
 
 void
