@@ -35,6 +35,7 @@ public:
     
   /** Sets a button/axis mapping that is equal to the xpad kernel driver */
   void mimic_xpad();
+  void mimic_xpad_wireless();
   void mouse();
   void guitar();
   void set_defaults();
